[package]
name = "lumol-py"
version = "0.1.0"
authors = ["Guillaume Fraux <guillaume.fraux@ens.fr>"]
build = "build.rs"

[dependencies]
lumol-core = {git = "https://github.com/lumol-org/lumol", rev = "788c94e"}
cpython = {git = "https://github.com/dgrunwald/rust-cpython/", rev = "4773d2e3"}

[lib]
crate-type = ["cdylib"]
